apps/base/ghostfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostfolio
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: ghostfolio
  template:
    metadata:
      labels:
        app: ghostfolio
    spec:
      containers:
        - name: ghostfolio
          image: ghostfolio/ghostfolio:2.254.0
          ports:
            - containerPort: 3333
---
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
spec:
  ports:
    - port: 3333
  selector:
    app: ghostfolio
