apps/base/ghostfolio/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
  selector:
    app: ghostfolio-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ghostfolio
    ports:
    - protocol: TCP
      port: 6379
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: ghostfolio-redis
  template:
    metadata:
      labels:
        app: ghostfolio-redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine
          ports:
            - containerPort: 6379
              name: redis
          command:
            - redis-server
            - "--appendonly"
            - "yes"
          volumeMounts:
            - name: redis-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
