apps/base/ghostfolio/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ghostfolio-default-deny
  namespace: ghostfolio
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: ghostfolio
spec:
  podSelector:
    matchLabels:
      app: ghostfolio-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ghostfolio
    ports:
    - protocol: TCP
      port: 6379

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: ghostfolio
spec:
  podSelector:
    matchLabels:
      app: ghostfolio-postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ghostfolio
    ports:
    - protocol: TCP
      port: 5432
